# Mnemosyne

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  justfile  pixi.toml  pyproject.toml
.claude-plugin/: marketplace.json
scripts/: validate_release_contract.py
skills/: address-review-preexisting-unrelated-precommit-failure.history  address-review-preexisting-unrelated-precommit-failure.md  adr-authoring-indexing-and-maintenance.history  adr-authoring-indexing-and-maintenance.md  agent-config-validation-and-integrity.history  agent-config-validation-and-integrity.md  architecture-claude-md-agents-md-single-source-ecosystem-migration.history  architecture-claude-md-agents-md-single-source-ecosystem-migration.md  architecture-claude-permission-bypass-removal-planning.md  architecture-compose-resource-limit-env-substitution.md  architecture-container-secret-cmdline-leak-fix.history  architecture-container-secret-cmdline-leak-fix.md  architecture-cross-repo-migration-verify-issue-inventory.md  architecture-ctx-github-guard-blind-spot.md  architecture-defer-env-coercion-lazy-resolver.md  architecture-dependency-resolver-public-edge-api-ordering.md  architecture-executable-convention-guard-pattern.history  architecture-executable-convention-guard-pattern.md  architecture-god-function-decomposition-planning-risks.history  architecture-god-function-decomposition-planning-risks.md  architecture-meta-repo-config-hardening-planning.md  architecture-mojo-import-ambiguity-alias-pattern.md  architecture-ocp-dip-abc-protocol-planning-risks.history  architecture-ocp-dip-abc-protocol-planning-risks.md  architecture-pipeline-stage-implementation.history  architecture-pipeline-stage-implementation.md  architecture-pipeline-stage-order-is-semantic.md  (+459 more)
(+14 files in other folders)
