[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-mnemosyne"
version = "3.0.0"
description = "Skills and session-memory store for the HomericIntelligence agentic ecosystem"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# Kept for pip compatibility (`pip install .[dev]`); mirrors the uv-native
# [dependency-groups] dev group below.
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
]

# uv-native dev dependency group (ADR-017). Mirrors the [project.optional-dependencies]
# dev group (pytest, pytest-cov) and adds the tools previously pip-installed ad hoc
# in CI (mypy, yamllint) plus the ruff/jsonschema/type-stub toolchain the lint and
# schema jobs need. Installed via `uv sync --group dev` (or `uv sync`, which pulls
# the default dev group automatically).
[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "mypy>=2.2",
    "yamllint>=1.35",
    "ruff>=0.6",
    "jsonschema>=4.26",
    "types-PyYAML",
    "build>=1.2",
    "twine>=5.0",
]

# Flat repo layout (scripts/, skills/, tests/, ...) breaks setuptools
# auto-discovery, so the distributable is declared explicitly. The shared
# library module is namespaced to avoid colliding with unrelated top-level
# modules in environments that install project-mnemosyne.
[tool.setuptools]
package-dir = {"" = "scripts"}
py-modules = ["mnemosyne_skill_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scripts --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
